--- a/.gitignore
+++ b/.gitignore
@@ -71,10 +71,10 @@ ENV/
 env.bak/
 venv.bak/
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
+# Database (commented out for prototype testing)
+# *.db
+# *.sqlite
+# *.sqlite3
 
 # Temporary files
 *.tmp
