--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
+  "buildCommand": "cd frontend && npm run build",
+  "outputDirectory": "frontend/.next",
+  "framework": "nextjs",
   "functions": {
-    "app/api/**/*.ts": {
+    "frontend/app/api/**/*.ts": {
       "runtime": "nodejs18.x"
     }
   }
