--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.0.3
+email-validator==2.1.0
 
 # Database drivers
 psycopg2-binary==2.9.9  # PostgreSQL driver
